--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,6 +1,13 @@
 FROM node:18-alpine
+
 WORKDIR /app
+
 COPY package*.json ./
+
 RUN npm install
+
 COPY . .
-CMD ["npm","run","dev"]
+
+EXPOSE 5173
+
+CMD ["npm", "run", "dev", "--", "--host", "0.0.0.0"]
