--- a/backend/package.json
+++ b/backend/package.json
@@ -2,20 +2,28 @@
   "name": "backend",
   "version": "1.0.0",
   "scripts": {
-    "start:dev": "nest start --watch"
+    "start:dev": "nest start --watch",
+    "build": "nest build",
+    "start": "node dist/main",
+    "start:prod": "node dist/main",
+    "generate:client": "./scripts/generate-client.sh",
+    "generate:client:compose": "./scripts/generate-client-compose.sh"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/swagger": "^7.4.2",
     "@nestjs/typeorm": "^11.0.0",
     "pg": "^8.10.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
+    "swagger-ui-express": "^5.0.1",
     "typeorm": "^0.3.25"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
+    "@openapitools/openapi-generator-cli": "^2.21.4",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
   }
