--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,17 +4,20 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "generate:client": "cd ../backend && npm run generate:client"
   },
   "dependencies": {
+    "axios": "^1.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
+    "@vitejs/plugin-react": "^4.0.0",
+    "openapi-typescript": "^7.8.0",
     "typescript": "^5.0.4",
-    "vite": "^4.3.0",
-    "@vitejs/plugin-react": "^4.0.0"
+    "vite": "^4.3.0"
   }
 }
