--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,10 @@ POSTGRES_HOST=db
 POSTGRES_PORT=5432
 REDIS_HOST=redis
 REDIS_PORT=6379
+
+# JWT Configuration
+JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
+JWT_EXPIRES_IN=24h
+
+# Frontend URL for CORS
+FRONTEND_URL=http://localhost:5173
