--- a/backend/package.json
+++ b/backend/package.json
@@ -7,14 +7,27 @@
     "start": "node dist/main",
     "start:prod": "node dist/main",
     "generate:client": "./scripts/generate-client.sh",
-    "generate:client:compose": "./scripts/generate-client-compose.sh"
+    "generate:client:compose": "./scripts/generate-client-compose.sh",
+    "typeorm": "typeorm-ts-node-commonjs",
+    "migration:generate": "npm run typeorm -- migration:generate src/migrations/$npm_config_name -d src/data-source.ts",
+    "migration:create": "npm run typeorm -- migration:create src/migrations/$npm_config_name",
+    "migration:run": "npm run typeorm -- migration:run -d src/data-source.ts",
+    "migration:revert": "npm run typeorm -- migration:revert -d src/data-source.ts"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/jwt": "^10.2.0",
+    "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.4.2",
     "@nestjs/typeorm": "^11.0.0",
+    "bcryptjs": "^2.4.3",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
     "pg": "^8.10.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
@@ -24,6 +37,9 @@
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
     "@openapitools/openapi-generator-cli": "^2.21.4",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/passport-jwt": "^4.0.1",
+    "@types/passport-local": "^1.0.38",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
   }
