--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -7,6 +7,8 @@
     "strict": true,
     "esModuleInterop": true,
     "experimentalDecorators": true,
-    "emitDecoratorMetadata": true
+    "emitDecoratorMetadata": true,
+    "strictPropertyInitialization": false,
+    "skipLibCheck": true
   }
 }
