--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,10 +16,13 @@
     "lucide-react": "^0.539.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.62.0",
+    "react-router-dom": "^6.30.1",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
+    "@hookform/resolvers": "^3.10.0",
     "@types/node": "^24.2.1",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
@@ -27,6 +30,7 @@
     "openapi-typescript": "^7.8.0",
     "tw-animate-css": "^1.3.6",
     "typescript": "^5.0.4",
-    "vite": "^6.0.0"
+    "vite": "^6.0.0",
+    "zod": "^3.25.76"
   }
 }
