--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,8 @@ JWT_EXPIRES_IN=24h
 
 # Frontend URL for CORS
 FRONTEND_URL=http://localhost:5173
+
+# 42 OAuth Configuration
+FORTY_TWO_CLIENT_ID=your-42-client-id
+FORTY_TWO_CLIENT_SECRET=your-42-client-secret
+FORTY_TWO_CALLBACK_URL=http://localhost:3000/auth/42/callback
