--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -2,11 +2,11 @@ server {
   listen 80;
 
   location /api/ {
-    proxy_pass http://api:3000/\;
+    proxy_pass http://api:3000/;
   }
 
   location / {
-    proxy_pass http://web:5173/\;
+    proxy_pass http://web:5173/;
     try_files $uri /index.html;
   }
 }
