--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,8 @@ FRONTEND_URL=http://localhost:5173
 FORTY_TWO_CLIENT_ID=your-42-client-id
 FORTY_TWO_CLIENT_SECRET=your-42-client-secret
 FORTY_TWO_CALLBACK_URL=http://localhost:3000/auth/42/callback
+
+# Google OAuth Configuration
+GOOGLE_CLIENT_ID=your-google-client-id
+GOOGLE_CLIENT_SECRET=your-google-client-secret
+GOOGLE_CALLBACK_URL=http://localhost:3000/auth/google/callback
