feat: add video processing functionality with FFmpeg and Redis job queue

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,5 +8,6 @@
   "workbench.sideBar.location": "left",
   "workbench.statusBar.visible": true,
   "window.title": "${rootName} - ${activeEditorShort}${separator}${appName}",
-  "window.menuBarVisibility": "toggle"
+  "window.menuBarVisibility": "toggle",
+  "editor.defaultFormatter": "esbenp.prettier-vscode"
 }
