--- a/worker/Dockerfile
+++ b/worker/Dockerfile
@@ -6,6 +6,9 @@ COPY package*.json ./
 
 RUN npm install
 
+# Install FFmpeg for video processing
+RUN apk add --no-cache ffmpeg
+
 COPY . .
 
 CMD ["npm", "run", "start:dev"]
