--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ services:
     env_file: .env
     volumes:
       - /app/node_modules
+      - videos:/app/videos
     depends_on:
       - db
       - redis
@@ -49,6 +50,7 @@ services:
     env_file: .env
     volumes:
       - /app/node_modules
+      - videos:/app/videos
     depends_on:
       - db
       - redis
@@ -85,3 +87,4 @@ services:
       - web
 volumes:
   pgdata:
+  videos:
