feat: implement video upload and processing features with HLS streaming support

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -10,5 +10,6 @@
     "emitDecoratorMetadata": true,
     "strictPropertyInitialization": false,
     "skipLibCheck": true
-  }
+  },
+  "exclude": ["node_modules", "dist", "videos"]
 }
