--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,5 +1,13 @@
 server {
   listen 80;
+  
+  # Allow 2GB file uploads
+  client_max_body_size 2G;
+  
+  # Increase timeouts for large file uploads
+  proxy_connect_timeout 300s;
+  proxy_send_timeout 300s;
+  proxy_read_timeout 300s;
 
   location /api/ {
     proxy_pass http://api:3000/;
@@ -7,6 +15,10 @@ server {
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header X-Forwarded-Proto $scheme;
+    
+    # Additional settings for file uploads
+    proxy_request_buffering off;
+    proxy_buffering off;
   }
 
   location / {
