feat: Implement worker completion detection and movie library frontend
Worker improvements:
- Add MovieDownloadMonitor class for complete download lifecycle management
- Implement checkTranscodingComplete() to verify HLS transcoding completion
  by checking for master.m3u8 and #EXT-X-ENDLIST markers in quality playlists
- Fix video path detection with movie title matching for subdirectories
- Add automatic completion scanning for all transcoding movies every 10s
- Fix updateMovieProgress to properly send status updates to backend
- Prevent overwriting 'ready' status back to 'transcoding'

Backend improvements:
- Add complete movies module with YTS and TPB torrent integration
- Add Aria2 service for BitTorrent download management
- Add Movie entity with full download/transcode status tracking
- Add movies controller with search, details, and download endpoints
- Implement movie library API endpoint (/movies/library)
- Add HLS streaming endpoints for movies (/movies/{imdbId}/master.m3u8)

Frontend improvements:
- Create MovieList component to display torrent movie library
- Add Badge UI component for status display (downloading/transcoding/ready)
- Update VideoPlayer to support both uploaded videos and torrent movies
- Add isMovie prop to VideoPlayer for proper routing
- Update Dashboard to show MovieList alongside legacy VideoList
- Add auto-refresh every 5 seconds for real-time progress updates
- Show play buttons only for ready movies

Docker improvements:
- Add volume mounts for frontend hot-reload development
- Fix duplicate target entries in docker-compose.yml

This enables complete end-to-end torrent movie streaming:
download → transcode → completion detection → ready status → HLS playback

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,6 +26,10 @@ services:
       - '5173:5173'
     env_file: .env
     volumes:
+      - ./frontend/src:/app/src
+      - ./frontend/index.html:/app/index.html
+      - ./frontend/vite.config.mts:/app/vite.config.mts
+      - ./frontend/tsconfig.json:/app/tsconfig.json
       - /app/node_modules
     depends_on:
       - api
@@ -51,9 +55,11 @@ services:
     volumes:
       - /app/node_modules
       - videos:/app/videos
+      - ./downloads:/downloads
     depends_on:
       - db
       - redis
+      - aria2
     develop:
       watch:
         - action: sync
@@ -76,6 +82,28 @@ services:
     image: redis:8-alpine
     ports:
       - '6379:6379'
+  aria2:
+    image: p3terx/aria2-pro
+    container_name: aria2
+    restart: unless-stopped
+    environment:
+      - PUID=1000
+      - PGID=1000
+      - RPC_SECRET=superlongrandomtoken
+      - RPC_PORT=6800
+      - LISTEN_PORT=6888
+      - DISK_CACHE=64M
+      - IPV6_MODE=false
+      - UPDATE_TRACKERS=true
+      - CUSTOM_TRACKER_URL=
+      - TZ=UTC
+    ports:
+      - '6800:6800'
+      - '6888:6888'
+      - '6888:6888/udp'
+    volumes:
+      - ./downloads:/downloads
+      - ./torrent_downloads:/downloads/torrents
   nginx:
     image: nginx:1.25-alpine
     ports:
