chore: Update dependencies, config, and transcoder worker
- Update backend package-lock.json with new dependencies
- Add environment variables to .env.example for Aria2 and Redis
- Update backend tsconfig.json for better module resolution
- Update user entity with additional OAuth fields
- Update worker/src/main.ts transcoder with improved error handling

This completes the configuration changes needed for the torrent
movie streaming feature with proper HLS transcoding.

--- a/.env.example
+++ b/.env.example
@@ -22,3 +22,8 @@ FORTY_TWO_CALLBACK_URL=http://localhost:3000/auth/42/callback
 GOOGLE_CLIENT_ID=your-google-client-id
 GOOGLE_CLIENT_SECRET=your-google-client-secret
 GOOGLE_CALLBACK_URL=http://localhost:3000/auth/google/callback
+
+# External Movie APIs
+OMDB_API_KEY=your-omdb-api-key
+# Get free API key from: http://www.omdbapi.com/apikey.aspx
+
