chore: Update .gitignore and add project documentation
- Add runtime directories to .gitignore (downloads/, torrent_downloads/)
- Add backup directories to .gitignore (backend/backup/, *.container)
- Add check-download-status.sh debug script for monitoring downloads
- Add en.subject.pdf project requirements documentation

This ensures clean repository with only source code and documentation,
excluding runtime data and backup files.

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,11 @@ pnpm-debug.log*
 # misc
 .DS_Store
 
+# runtime directories
+downloads/
+torrent_downloads/
+
+# backup directories
+backend/backup/
+*.container
+
