feat: add movie search functionality and download management
- Implemented MovieSearch component for searching and downloading movies.
- Integrated API calls to fetch movie data and manage downloads.
- Added dialog for movie details and quality selection.
- Enhanced video transcoding process with progress monitoring and restart capability for incomplete jobs.
- Updated MovieDownloadMonitor to handle stuck transcoding jobs.
- Introduced axios for API requests in the worker.
- Improved UI components for better user experience.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "generate:client": "cd ../backend && npm run generate:client"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-slot": "^1.2.3",
     "@tailwindcss/vite": "^4.1.11",
     "@types/hls.js": "^0.13.3",
