--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,14 @@ services:
   api:
     build: ./backend
     ports:
-      - '3000:3000'
+      - "3000:3000"
     env_file: .env
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
+    environment:
+      - NODE_ENV=development
+      # Use host's DNS to bypass potential blocks
+      - DNS_SERVERS=8.8.8.8,1.1.1.1
     volumes:
       - /app/node_modules
       - videos:/app/videos
@@ -23,7 +29,7 @@ services:
   web:
     build: ./frontend
     ports:
-      - '5173:5173'
+      - "5173:5173"
     env_file: .env
     volumes:
       - ./frontend/src:/app/src
@@ -74,14 +80,14 @@ services:
     image: postgres:12-alpine
     restart: always
     ports:
-      - '5432:5432'
+      - "5432:5432"
     env_file: .env
     volumes:
       - pgdata:/var/lib/postgresql/data
   redis:
     image: redis:8-alpine
     ports:
-      - '6379:6379'
+      - "6379:6379"
   aria2:
     image: p3terx/aria2-pro
     container_name: aria2
@@ -98,16 +104,16 @@ services:
       - CUSTOM_TRACKER_URL=
       - TZ=UTC
     ports:
-      - '6800:6800'
-      - '6888:6888'
-      - '6888:6888/udp'
+      - "6800:6800"
+      - "6888:6888"
+      - "6888:6888/udp"
     volumes:
       - ./downloads:/downloads
       - ./torrent_downloads:/downloads/torrents
   nginx:
     image: nginx:1.25-alpine
     ports:
-      - '8080:80'
+      - "8080:80"
     volumes:
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
     depends_on:
