--- a/worker/package.json
+++ b/worker/package.json
@@ -5,6 +5,7 @@
     "start:dev": "ts-node-dev src/main.ts"
   },
   "dependencies": {
+    "axios": "^1.13.1",
     "ioredis": "^5.3.2"
   },
   "devDependencies": {
