--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,9 +1,8 @@
 {
   "recommendations": [
+    "biomejs.biome",
     "ms-vscode.vscode-typescript-next",
     "bradlc.vscode-tailwindcss", 
-    "esbenp.prettier-vscode",
-    "dbaeumer.vscode-eslint",
     "ms-vscode.vscode-react-refactor",
     "formulahendry.auto-rename-tag",
     "christian-kohler.path-intellisense",
