--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,10 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "generate:client": "cd ../backend && npm run generate:client"
+    "generate:client": "cd ../backend && npm run generate:client",
+    "lint": "biome check .",
+    "lint:fix": "biome check --write .",
+    "format": "biome format --write ."
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.15",
@@ -25,6 +28,7 @@
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
+    "@biomejs/biome": "2.3.2",
     "@hookform/resolvers": "^3.10.0",
     "@types/node": "^24.2.1",
     "@types/react": "^18.2.0",
