--- a/worker/package.json
+++ b/worker/package.json
@@ -9,10 +9,12 @@
   },
   "dependencies": {
     "axios": "^1.13.1",
+    "fluent-ffmpeg": "^2.1.3",
     "ioredis": "^5.3.2"
   },
   "devDependencies": {
     "@biomejs/biome": "2.3.2",
+    "@types/fluent-ffmpeg": "^2.1.27",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.0.4"
   }
