--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
     deploy:
       resources:
         limits:
-          cpus: '1'
+          cpus: "1"
           memory: 512M
     depends_on:
       - db
@@ -47,7 +47,7 @@ services:
     deploy:
       resources:
         limits:
-          cpus: '1'
+          cpus: "1"
           memory: 512M
     depends_on:
       - api
@@ -79,13 +79,13 @@ services:
     deploy:
       resources:
         limits:
-          cpus: '8'  # Allow worker to use all 8 CPU cores
-          memory: 4G  # 4GB memory limit (adjust based on your system RAM)
+          cpus: "8" # Allow worker to use all 8 CPU cores
+          memory: 4G # 4GB memory limit (adjust based on your system RAM)
         reservations:
-          cpus: '4'  # Reserve at least 4 CPU cores for worker (50% of total)
-          memory: 2G  # Reserve at least 2GB memory
+          cpus: "4" # Reserve at least 4 CPU cores for worker (50% of total)
+          memory: 2G # Reserve at least 2GB memory
     # Set higher CPU priority for worker container
-    cpu_shares: 2048  # Default is 1024, this gives 2x priority
+    cpu_shares: 2048 # Default is 1024, this gives 2x priority
     # Uncomment the following lines if running on Linux with Intel/AMD GPU for hardware acceleration
     # devices:
     #   - /dev/dri:/dev/dri
