Refactor components for improved readability and consistency
- Simplified imports in VideoUpload, LoginForm, RegisterForm, Dashboard, and MovieDetailsPage components.
- Consolidated multiline JSX expressions into single lines for better clarity.
- Updated utility functions and context handling in AuthContext and utils files.
- Enhanced styling consistency in UI components like Button, Badge, Card, and Dialog.
- Removed unnecessary whitespace and improved formatting across various files.
- Adjusted TypeScript configurations for cleaner project structure.

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -11,5 +11,13 @@
     "strictPropertyInitialization": false,
     "skipLibCheck": true
   },
-  "exclude": ["node_modules", "dist", "videos", "backup", "**/*.spec.ts", "**/*-test.ts", "**/performance-test.ts"]
+  "exclude": [
+    "node_modules",
+    "dist",
+    "videos",
+    "backup",
+    "**/*.spec.ts",
+    "**/*-test.ts",
+    "**/performance-test.ts"
+  ]
 }
