--- a/backend/package.json
+++ b/backend/package.json
@@ -37,7 +37,6 @@
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
-    "ioredis": "^5.8.2",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
@@ -46,6 +45,7 @@
     "pg": "^8.10.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
+    "srt-webvtt": "^2.0.0",
     "swagger-ui-express": "^5.0.1",
     "typeorm": "^0.3.25"
   },
