chore: update biome configuration and fix CSS file formatting

--- a/frontend/biome.json
+++ b/frontend/biome.json
@@ -38,5 +38,14 @@
       "arrowParentheses": "always",
       "jsxQuoteStyle": "double"
     }
+  },
+  "css": {
+    "parser": {
+      "cssModules": false,
+      "tailwindDirectives": true
+    },
+    "linter": {
+      "enabled": true
+    }
   }
 }
